# NISQA

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  run_evaluate.py  run_predict.py  run_train.py
nisqa/: NISQA_lib.py  NISQA_model.py  __init__.py  _resources.py  inference.py
nisqa/resources/: __init__.py
